# NotSimpleConsoleGame

./: CMakeLists.txt  build_linux.sh  build_windows.sh  linux.cmake  windows.cmake
build_linux/: CMakeCache.txt  Makefile  NotSimpleConsoleGame  cmake_install.cmake
include/: abebe.h
include/a/: bebe.h
src/: abebe.c  main.c
src/a/: bebe.c
